multi select categories, categories.jsp and CategoryManager